| Summary: | ASTERISK-27133: res_rtp_asterisk: RTCP does not use ICE when RTCP-MUX in use | ||
| Reporter: | Joshua C. Colp (jcolp) | Labels: | |
| Date Opened: | 2017-07-16 12:18:30 | Date Closed: | 2017-07-24 11:57:41 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_rtp_asterisk |
| Versions: | Frequency of Occurrence | ||
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | When RTCP-MUX is negotiated with ICE there is a chance that RTCP will not be sent. This is because the correct component is not used, resulting in falling back to the normal packet sending. If the remote address is not correct then RTCP will not be sent. | ||
| Comments: | |||